<resources>
    <string name="app_name">appRebirth</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>




    <string name="log">日志</string>
    <string name="settings">设置</string>
    <string name="set_alias">设置别名</string>
    <string name="unset_alias">撤销别名</string>
    <string name="set_account">设置帐号</string>
    <string name="unset_account">撤销帐号</string>
    <string name="subscribe_topic">订阅标签</string>
    <string name="unsubscribe_topic">撤销标签</string>
    <string name="set_env">设置环境</string>
    <string name="set_accept_time">设置时间</string>
    <string name="pause_push">暂停推送</string>
    <string name="current_env">当前环境：%s</string>
    <string name="official_env">线上环境</string>
    <string name="sandbox_env">沙箱环境</string>
    <string name="register_success">Register push success.</string>
    <string name="register_fail">Register push fail.</string>
    <string name="recv_passthrough_message"> Receive a passthrough message. Content is \"%1$s\"</string>
    <string name="click_notification_message"> Clicked a notification message. Content is \"%1$s\"</string>
    <string name="arrive_notification_message"> Arrived a notification message. Content is \"%1$s\"</string>
    <string name="set_alias_success"> Set alias \"%1$s\" success.</string>
    <string name="set_alias_fail"> Set alias fail for %1$s.</string>
    <string name="unset_alias_success"> Unset alias \"%1$s\" success.</string>
    <string name="unset_alias_fail"> Unset alias fail for %1$s.</string>
    <string name="set_account_success"> Set account \"%1$s\" success.</string>
    <string name="set_account_fail"> Set account fail for %1$s.</string>
    <string name="unset_account_success"> Unset account \"%1$s\" success.</string>
    <string name="unset_account_fail"> Unset account fail for %1$s.</string>
    <string name="subscribe_topic_success"> Subscribe topic \"%1$s\" success.</string>
    <string name="subscribe_topic_fail"> Subscribe topic fail for %1$s.</string>
    <string name="unsubscribe_topic_success"> Unsubscribe topic \"%1$s\" success.</string>
    <string name="unsubscribe_topic_fail"> Unsubscribe topic fail for %1$s.</string>
    <string name="set_accept_time_success"> Set accept time %1$s - %2$s success.</string>
    <string name="set_accept_time_fail"> Set accept time fail for %1$s.</string>

    <string-array name="voicer_cloud_entries">
        <item>小燕</item>
        <item>小宇</item>
        <item>凯瑟琳</item>
        <item>亨利</item>
        <item>玛丽</item>
        <item>小研</item>
        <item>小琪</item>
        <item>小峰</item>
        <item>小梅</item>
        <item>小莉</item>
        <item>小蓉</item>
        <item>小芸</item>
        <item>小坤</item>
        <item>小强 </item>
        <item>小莹</item>
        <item>小新</item>
        <item>楠楠</item>
        <item>老孙</item>
    </string-array>

    <string-array name="voicer_cloud_values">
        <item>xiaoyan</item>
        <item>xiaoyu</item>
        <item>catherine</item>
        <item>henry</item>
        <item>vimary</item>
        <item>vixy</item>
        <item>xiaoqi</item>
        <item>vixf</item>
        <item>xiaomei</item>
        <item>xiaolin</item>
        <item>xiaorong</item>
        <item>xiaoqian</item>
        <item>xiaokun</item>
        <item>xiaoqiang</item>
        <item>vixying</item>
        <item>xiaoxin</item>
        <item>nannan</item>
        <item>vils</item>
    </string-array>
</resources>
