<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/set_alias"
                    android:layout_width="wrap_content"


                    android:layout_height="wrap_content"
                    android:text="@string/set_alias"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/set_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_account"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/subscribe_topic"
                    android:layout_width="wrap_content"


                    android:layout_height="wrap_content"
                    android:text="@string/subscribe_topic"

                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/set_accept_time"
                android:layout_width="wrap_content"


                android:layout_height="wrap_content"
                android:text="@string/set_accept_time"

                />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/unset_alias"
                    android:layout_width="wrap_content"


                    android:layout_height="wrap_content"
                    android:text="@string/unset_alias"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/unset_account"
                    android:layout_width="wrap_content"


                    android:layout_height="wrap_content"
                    android:text="@string/unset_account"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/unsubscribe_topic"
                    android:layout_width="wrap_content"


                    android:layout_height="wrap_content"
                    android:text="@string/unsubscribe_topic"

                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/pause_push"
                android:layout_width="wrap_content"


                android:layout_height="wrap_content"
                android:text="@string/pause_push"

                />
        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/suwg_lin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/set_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="设置yb1"

                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/set_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="设置yb2"

                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/set_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="设置suwg"

                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/set_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="设置kp"

                    />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imei_to"

        />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="模拟注册"

                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/loc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="查询某IMEI的loc"

                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="clear"

                    />
            </LinearLayout>
        </LinearLayout>

        </LinearLayout>

    </LinearLayout>





    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dip"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/log"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textIsSelectable="true"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:singleLine="false" />
    </ScrollView>

</LinearLayout>
